fix: buttons use spacing-base size to horizontal padding

--- a/packages/core/src/components/button/button.scss
+++ b/packages/core/src/components/button/button.scss
@@ -26,10 +26,17 @@
     --ion-color-contrast: var(--color-neutral-black);
   }
 
+  &[size='small'],
+  &[size='default'],
+  &[size='large'] {
+    --padding-start: var(--spacing-base);
+    --padding-end: var(--spacing-base);
+    height: var(--button-size);
+  }
+
   &[size='default'] {
     --button-size: var(--spacing-xxxxlarge);
     font: var(--button-medium);
-    height: var(--button-size);
     letter-spacing: var(--button-medium-letter);
 
     &.is-circle {
@@ -40,7 +47,6 @@
   &[size='small'] {
     --button-size: var(--spacing-xxxlarge);
     font: var(--button-small);
-    height: var(--button-size);
     letter-spacing: var(--button-small-letter);
 
     &.is-circle {
@@ -51,7 +57,6 @@
   &[size='large'] {
     --button-size: var(--spacing-giant);
     font: var(--button-large);
-    height: var(--button-size);
     letter-spacing: var(--button-large-letter);
 
     &.is-circle {
@@ -67,7 +72,7 @@
     }
   }
 
-  &.is-outline-filled{
+  &.is-outline-filled {
     --background: var(--color-neutral-white);
     --color: var(--ion-color-base);
     --border-width: 2px;
@@ -98,5 +103,3 @@
   top: 50%;
   transform: translate(-50%, -50%);
 }
-
-
